GPII-183: Updated tts enactor to use buzz
Using the buzz html5 audio framework for the tts enactor. Also, removed the tts enactor from the iFrame as it should only be enabled in the main page.

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="demo.css" />
 
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
+    <script type="text/javascript" src="../../src/shared/lib/buzz/js/buzz.js"></script>
     <script type="text/javascript" src="../../src/discoveryTool/js/SelfVoicingEnactor.js"></script>
     <script type="text/javascript" src="../../src/discoveryTool/js/DiscoveryTool.js"></script>
 
@@ -121,14 +122,14 @@
                     <h2>Where Are Electrons?</h2>
 
                     <p>Unlike protons and neutrons, which are located inside the nucleus at the center of the atom, electrons are found outside the nucleus. Because opposite electric charges attract each other, negative electrons are attracted to the positive nucleus. This force of attraction keeps electrons constantly moving through the otherwise empty space around the nucleus. The Figure shown below is a common way to represent the structure of an atom. It shows the electron as a particle orbiting the nucleus, similar to the way that planets orbit the sun.</p>
-                    <h3>Model of Atomic Structure</h3>             
-                    <div id="structure" role="img" class="main-content-image" aria-label="Model of atomic structure: This image illustrates atomic structure: a cluster of three neutrons (labelled '2') and three protons (labelled '3') are surrounded by two rings of electrons (labelled '1'). The inner ring has two electrons on it and the outer ring has one." aria-describedby="structure-descrip"></div>                    
+                    <h3>Model of Atomic Structure</h3>
+                    <div id="structure" role="img" class="main-content-image" aria-label="Model of atomic structure: This image illustrates atomic structure: a cluster of three neutrons (labelled '2') and three protons (labelled '3') are surrounded by two rings of electrons (labelled '1'). The inner ring has two electrons on it and the outer ring has one." aria-describedby="structure-descrip"></div>
                     <ol id="structure-descrip">
                         <li>Electron</li>
                         <li>Neutron</li>
                         <li>Proton</li>
                     </ol>
-                </section>  
+                </section>
                 <section>
                     <h2>Orbitals</h2>
 
@@ -168,15 +169,15 @@
 <p>You can see all of these ideas in action at the following URL (scroll down to the animation at the bottom of the Web page): http://www.brooklyn.cuny.edu/bc/ahp/SDPS/SD.PS.electrons.html</p>
 
                     <h3>Energy Levels and Electrons</h3>
-                    <div id="energylevels" role="img" class="main-content-image" aria-label="Graphic showing energy levels and electrons: This diagram shows a circle (labelled '1') surrounded by three rings, labelled moving outward from the centre '2', '3' and '4'."></div>         
-                    <div id="energy-descrip">          
+                    <div id="energylevels" role="img" class="main-content-image" aria-label="Graphic showing energy levels and electrons: This diagram shows a circle (labelled '1') surrounded by three rings, labelled moving outward from the centre '2', '3' and '4'."></div>
+                    <div id="energy-descrip">
                     <ol>
                         <li><strong>Nucleus</strong> - contains protons and neutrons</li>
                         <li><strong>1st energy level</strong> - can hold a maximum of 2 electrons in one orbital</li>
                         <li><strong>2nd energy level</strong> - can hold a maximum of 8 electrons over 4 different orbitals</li>
                         <li><strong>3rd energy level</strong> - can hold a maximum of 18 electrons distributed over 9 different orbitals</li>
                     </ol>
-                    </div>                     
+                    </div>
                     <p><strong>Q:</strong> How many electrons can there be in each type of orbital shown above?</p>
                     <p><strong>A:</strong> There can be a maximum of two electrons in any orbital, regardless of its shape.</p>
                     <p><strong>Q:</strong> Where is the nucleus in each orbital?</p>
