Implemented the "Add to my preferences" star font icon.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -6,6 +6,11 @@
 		</div>
 		<label class="headerTitle" for="preferenceSwitch">increase size</label>
 
+        <input type="checkbox" id="addToMyPreferences"/>
+		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
+		</div>
+		<label class="addToMyPreferencesLabel" for="addToMyPreferences"></label>
+
 	    <div class="increaseSizePreferenceGroup">
 	        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
 	        <div class="flc-uiOptions-cursor-size fl-uiOptions-category fl-uiOptions-text"></div>
