--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -44,10 +44,10 @@
     </div>
 
     <div class="fl-container-flex35 fl-force-right">
-        <div class="fl-uiOptions-preview">
+        <!-- <div class="fl-uiOptions-preview">
             <h2>Preview your changes</h2>
             <iframe class="flc-uiOptions-preview-frame" src="" frameborder="0"></iframe>
-        </div>
+        </div> -->
         <div class="fl-uiOptions-buttons">
             <input class="flc-uiOptions-save fl-uiOptions-save" type="button" value="Save and apply" />
             <input class="flc-uiOptions-reset" type="button" value="Reset" />
