--- a/src/shared/adjusters/html/speakTextTemplate-screenReaderSwitch.html
+++ b/src/shared/adjusters/html/speakTextTemplate-screenReaderSwitch.html
@@ -1,8 +1,8 @@
-<div class="speakText-screenReaderSwitch-element">
-    <h3><label for="screenReaderSwitch" class="gpii-screenReaderSwitch-label switch"></label></h3>
+<div class="speakText-screenReaderTTSEnabled-element">
+    <h3><label for="screenReaderTTSEnabled" class="gpii-screenReaderTTSEnabled-label switch"></label></h3>
     <div id="screen-reader-onoff" class="fl-uiOptions-onoff">
-        <input type="checkbox" id="screenReaderSwitch" class="gpii-screenReaderSwitch"/>
-        <label for="screenReaderSwitch">
+        <input type="checkbox" id="screenReaderTTSEnabled" class="gpii-screenReaderTTSEnabled"/>
+        <label for="screenReaderTTSEnabled">
             <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
                 <span class="fl-uiOptions-switch-inner"></span>
             </span>
