--- a/src/shared/adjusters/html/speakTextTemplate-screenReaderTTSEnabled.html
+++ b/src/shared/adjusters/html/speakTextTemplate-screenReaderTTSEnabled.html
@@ -1,4 +1,11 @@
-<div class="speakText-screenReaderTTSEnabled-element">
-    <input type="checkbox" id="preferenceSwitch" class="gpii-screenReaderTTSEnabled"/>
-    <label for="preferenceSwitch" class="gpii-screenReaderTTSEnabled-label main-checkbox-label"></label>
+<div class="speakText-screenReaderSwitch-element">
+    <h3><label for="screenReaderSwitch" class="gpii-screenReaderSwitch-label switch"></label></h3>
+    <div id="screen-reader-onoff" class="fl-uiOptions-onoff">
+        <input type="checkbox" id="screenReaderSwitch" class="gpii-screenReaderSwitch"/>
+        <label for="screenReaderSwitch">
+            <span class="fl-uiOptions-switch" data-checkboxStateOn="ON" data-checkboxStateOff="OFF">
+                <span class="fl-uiOptions-switch-inner"></span>
+            </span>
+        </label>
+    </div>
 </div>
