Centered preview text horizontally and vertically.

--- a/demos/pmt/uiOptionsCursorPreview.html
+++ b/demos/pmt/uiOptionsCursorPreview.html
@@ -2,8 +2,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Preview</title>
+    <link rel="stylesheet" type="text/css" href="../../src/pmt/css/PreferencesManagementTool.css" />
 </head>
-<body style="margin: 0;">
-	<label>This is how the cursor will appear.</label>
+<body class="flc-uiOptions-preview-per-setting-body">
+	<div class="flc-uiOptions-preview-per-setting-div">
+      <div class="flc-uiOptions-preview-per-setting-div-inner">
+          <p>This is how the cursor will appear.</p>
+      </div>
+	</div>
 </body>
 </html>
