--- a/demos/pmt/uiOptionsCursorPreview.html
+++ b/demos/pmt/uiOptionsCursorPreview.html
@@ -7,7 +7,7 @@
 <body class="flc-uiOptions-preview-per-setting-body">
 	<div class="flc-uiOptions-preview-per-setting-div">
       <div class="flc-uiOptions-preview-per-setting-div-inner">
-          <p>This is how the cursor will appear.</p>
+			<div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-cursor"></div>
       </div>
 	</div>
 </body>
