Divide-and-conquer: CSS animation jump fixed.

--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -17,7 +17,7 @@
                     <span class="fl-uiOptions-switch-inner"></span>
                 </span>
             </label>
-        </div><br><br>
+        </div><br><br><br>
     </div>
 
     <div id="speech-rate">
@@ -80,6 +80,6 @@
 
     <div class="more-options">
         <input type="checkbox" class="more-options-checkbox"/>
-        <label for="moreOptions" class="more-options-label">+ more</label>
+        <label for="moreOptions" class="more-options-label"></label>
     </div>
 </div>
