--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -46,6 +46,26 @@
             </div>
         </header>
 
+        <!-- BEGIN markup for discoveryTool -->
+        <!-- The discoveryTool is placed after the header in the DOM to enable the desired tab order. This
+        could not be achieved through setting the tabindex alone, as the tabindex of the items in the
+        iframe are calculated separately from those of the parent page. Meaning that the tab focus would jump
+        back to the top of the page. -->
+        <div class="flc-uiOptions-discoveryTool fl-uiOptions-discoveryTool">
+
+            <!-- This div is for the sliding panel that shows and hides the discoveryTool controls -->
+            <div class="fl-panelBar fl-inverted-color">
+                <!-- button id="reset" class="flc-uiOptions-reset fl-uiOptions-reset"><span class="fl-icon-undo"></span> Reset</button -->
+                <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide" aria-label="" aria-controls="dtpanel"></button>
+                <label for="show-hide" class="flc-icon-discover fl-icon-discover" role="presentation" aria-label="Discover"></label>
+            </div>
+
+            <!-- This is the div that will contain the UI Options component -->
+            <div class="flc-slidingPanel-panel flc-uiOptions-iframe" role="region" id="dtpanel" aria-expanded=""></div>
+
+        </div>
+        <!-- END markup for discoveryTool -->
+
         <section class="main-content">
             <header class="fl-clearfix">
                 <span class="fl-icon-atom" aria-label="Graphic of an atom" role="img"></span>
@@ -236,21 +256,5 @@
             </div>  <!-- closing main div -->
         </section>
     </div>
-
-    <!-- BEGIN markup for discoveryTool -->
-    <div class="flc-uiOptions-discoveryTool fl-uiOptions-discoveryTool">
-
-        <!-- This div is for the sliding panel that shows and hides the discoveryTool controls -->
-        <div class="fl-panelBar fl-inverted-color">
-            <!-- button id="reset" class="flc-uiOptions-reset fl-uiOptions-reset"><span class="fl-icon-undo"></span> Reset</button -->
-            <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide" aria-label="" aria-controls="dtpanel"></button>
-            <label for="show-hide" class="flc-icon-discover fl-icon-discover" role="presentation" aria-label="Discover"></label>
-        </div>
-
-        <!-- This is the div that will contain the UI Options component -->
-        <div class="flc-slidingPanel-panel flc-uiOptions-iframe" role="region" id="dtpanel" aria-expanded=""></div>
-
-    </div>
-    <!-- END markup for discoveryTool -->
 </body>
 </html>
