Divide-and-conquer: jQuery funcs now added using selectorsToIgnore

--- a/src/shared/adjusters/html/newestSpeakText.html
+++ b/src/shared/adjusters/html/newestSpeakText.html
@@ -14,7 +14,7 @@
 <form id="options" action="" class="fl-uiOptions fl-uiOptions-fullNoPreview fl-col-fixed-72em fl-focus">
     <div class="flc-uiOptions-controls">
         <div class="fl-uiOptions-category">
-            <div class="speakText-wordEcho"></div>
+            <div class="speakText-collectiveContainer"></div>
         </div>
     </div>
 </form>
@@ -26,3 +26,18 @@
 </div>
 </body>
 </html>
+
+
+
+<!-- Vyprosi:
+
+auditoryOutLanguage custom adjuster - how to go about it
+http://wiki.fluidproject.org/display/fluid/%28C4A%29+Preference+Editor+adjuster+mockups+for+iteration+2#id-%28C4A%29PreferenceEditoradjustermockupsforiteration2-5.Fullyexpandedviewshowingexamplesofhoveranddrop-downfunctionality%28contrastdeactivated%29
+
+selector corresponding to a certain section in the template - what should be given to the protoTree, because if nothing is given, then it wouldn't show. "${<random-text-here>}" works, but it's ugly. -->
+
+<!-- Za drugata sedmica:
+    - zvezdata - selektor i za neq
+    - da se izmisqlt po-svestni imena za selektorite
+    ignoredSelectors!
+-->
