--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -20,7 +20,7 @@
         </div><br><br><br>
     </div>
 
-    <div id="speech-rate">
+    <div id="speech-rate" class="speech-rate-class">
         <div class="gpii-speechRate">
             <label class="gpii-speechRate-label" for="speech-rate-input" id="speechRateLabel"></label><br>
             <label class="gpii-textfieldStepper-decrement gpii-speechRate-minus" id="speechRateMinus"></label>
