Removed the global lowercase labels because it broke case sensitivity in tooltips. First working version of tooltips.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -9,7 +9,7 @@
         <input type="checkbox" id="addToMyPreferences"/>
 		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
 		</div>
-		<label class="addToMyPreferencesLabel" for="addToMyPreferences"></label>
+		<label class="addToMyPreferencesLabel" for="addToMyPreferences" title=""></label>
 
 	    <div class="increaseSizePreferenceGroup">
 	        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
