--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -9,7 +9,7 @@
         <input type="checkbox" id="addToMyPreferences"/>
 		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
 		</div>
-		<label class="addToMyPreferencesLabel" for="addToMyPreferences" title=""></label>
+		<label class="addToMyPreferencesLabel" for="addToMyPreferences" tooltip-checked="Remove from my preferences" tooltip-unchecked="Add to my preferences" title=""></label>
 
 	    <div class="increaseSizePreferenceGroup">
 	        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
