Divide-and-conquer: First attempt of template division.

--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -54,10 +54,10 @@
             <label for="announce-instructions" class="checkbox-label long-lined-label"><span class="gpii-speakTutorialMessages-label"></span></label>
         </div>
 
-        <div class="speakText-keyEcho-element">
+<!--         <div class="speakText-keyEcho-element">
             <input type="checkbox" id="echo-letter" class="gpii-keyEcho" />
             <label for="echo-letter" class="checkbox-label"><span class="gpii-keyEcho-label"></span></label><br>
-        </div>
+        </div> -->
 
         <div class="speakText-wordEcho-element">
             <input type="checkbox" id="echo-word" class="gpii-wordEcho" />
