Added the "Contrast" header. Fixed the layout of header title.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,15 +1,29 @@
 <form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus">
-    <div class="fl-container-flex60 fl-force-left preference">
+	<div class="fl-container-flex60 fl-force-left preference constrast">
 
-        <input type="checkbox" id="preferenceSwitch"/>
+        <input type="checkbox" id="preferenceSwitchContrast"/>
 		<div class="headerImage fl-adjuster-icons">
 		</div>
-		<label class="headerTitle" for="preferenceSwitch">increase size</label>
+		<label class="headerTitle" for="preferenceSwitchContrast">add contrast</label>
 
-        <input type="checkbox" id="addToMyPreferences"/>
+        <input type="checkbox" id="addToMyPreferencesContrast"/>
 		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
 		</div>
-		<label class="addToMyPreferencesLabel" for="addToMyPreferences" tooltip-checked="Remove from my preferences" tooltip-unchecked="Add to my preferences" title=""></label>
+		<label class="addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="Remove from my preferences" tooltip-unchecked="Add to my preferences" title=""></label>
+
+    </div>
+    
+    <div class="fl-container-flex60 fl-force-left preference increaseSize">
+
+        <input type="checkbox" id="preferenceSwitchIncreaseSize"/>
+		<div class="headerImage fl-adjuster-icons">
+		</div>
+		<label class="headerTitle" for="preferenceSwitchIncreaseSize">increase size</label>
+
+        <input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
+		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
+		</div>
+		<label class="addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="Remove from my preferences" tooltip-unchecked="Add to my preferences" title=""></label>
 
 	    <div class="increaseSizePreferenceGroup">
 	        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
