Implemented the "Contrast" preference in model.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,7 +1,7 @@
 <form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus">
-	<div class="fl-container-flex60 fl-force-left preference constrast">
+	<div class="fl-container-flex60 fl-force-left preference flc-uiOptions-contrastPanel">
 
-        <input type="checkbox" id="preferenceSwitchContrast"/>
+        <input type="checkbox" id="preferenceSwitchContrast" class="flc-uiOptions-constrastInput"/>
 		<div class="headerImage fl-adjuster-icons">
 		</div>
 		<label class="headerTitle" for="preferenceSwitchContrast">add contrast</label>
