Renamed the increaseSize panel's classname.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -13,7 +13,7 @@
 
     </div>
     
-    <div class="fl-container-flex60 fl-force-left preference increaseSize">
+    <div class="fl-container-flex60 fl-force-left preference flc-uiOptions-increaseSizePanel">
 
         <input type="checkbox" id="preferenceSwitchIncreaseSize"/>
 		<div class="headerImage fl-adjuster-icons">
