--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,15 +1,9 @@
 <form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus">
 	<div class="fl-container-flex60 fl-force-left preference flc-uiOptions-contrastPanel">
 
-        <input type="checkbox" id="preferenceSwitchContrast" class="flc-uiOptions-constrastInput"/>
-		<div class="headerImage fl-adjuster-icons">
+	    <div class="contrastPreferenceGroup">
+	        <div class="flc-uiOptions-contrast fl-uiOptions-text"></div>
 		</div>
-		<label class="headerTitle" for="preferenceSwitchContrast">add contrast</label>
-
-        <input type="checkbox" id="addToMyPreferencesContrast"/>
-		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
-		</div>
-		<label class="addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="Remove from my preferences" tooltip-unchecked="Add to my preferences" title=""></label>
 
     </div>
     
