--- a/demos/pmt/uiOptionsTextPreview.html
+++ b/demos/pmt/uiOptionsTextPreview.html
@@ -3,6 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Preview</title>
     <link rel="stylesheet" type="text/css" href="../../src/pmt/css/PreferencesManagementTool.css" />
+    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-yb-uio.css" />
 </head>
 <body class="flc-uiOptions-preview-per-setting-body">
 	<div class="flc-uiOptions-preview-per-setting-div">
