Divide-and-conquer: First version of auditoryOutLanguage searchable dropdown implemented. Division of templates procrastinated.

--- a/demos/speakTextAdjusterGroup/index.html
+++ b/demos/speakTextAdjusterGroup/index.html
@@ -14,8 +14,13 @@
         <script type="text/javascript" src="../../src/shared/adjusters/js/speakTextCollectivePanel.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/speakText.js"></script>
+
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
         <title>Speak Text Demo</title>
-        </head>
+    </head>
     <body>
         <h1>Demo of the Speak Text adjuster group</h1>
 
