--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -27,13 +27,15 @@
             <input type="text" class="gpii-textfieldStepper-field fl-inputs" id="speechRate"/>
             <label class="gpii-textfieldStepper-increment gpii-speechRate-plus" id="speechRatePlus"></label>
         </div>
-    </div>
+    </div><br>
 
     <div class="fully-expanded">
-        <div class="speakText-auditoryOutLanguage-element">
-            <label class="gpii-auditoryOutLanguage-label" for="languages"></label><br>
-            <select class="gpii-auditoryOutLanguage fl-inputs" id="languages"></select>
+
+        <div class="speakText-auditoryOutLanguage-element ui-widget">
+          <label class="gpii-auditoryOutLanguage-label"></label><br>
+          <select class="gpii-auditoryOutLanguage" id="baba"></select>
         </div><br>
+
         <div class="speakText-punctuationVerbosity-element">
             <label class="gpii-punctuationVerbosity-label"></label>
             <div class="punctuationVerbosity-container">
@@ -54,10 +56,10 @@
             <label for="announce-instructions" class="checkbox-label long-lined-label"><span class="gpii-speakTutorialMessages-label"></span></label>
         </div>
 
-<!--         <div class="speakText-keyEcho-element">
+        <div class="speakText-keyEcho-element">
             <input type="checkbox" id="echo-letter" class="gpii-keyEcho" />
             <label for="echo-letter" class="checkbox-label"><span class="gpii-keyEcho-label"></span></label><br>
-        </div> -->
+        </div>
 
         <div class="speakText-wordEcho-element">
             <input type="checkbox" id="echo-word" class="gpii-wordEcho" />
