GPII-196, GPII-200: - "More text" now says "Extra Words" - panel labels are all now lower case - "Try something…" now uses a hand pointer and the arrow is smaller - checkmark transition sped up - selected preferences now appear colour inverted when in contrast modes. - added RobotoSlab font.

--- a/src/discoveryTool/html/MoreTextPanelTemplate.html
+++ b/src/discoveryTool/html/MoreTextPanelTemplate.html
@@ -2,5 +2,5 @@
 <label for="more-text">
 	<span class="fl-discoveryTool-panel-icon fl-discoveryTool-icon-moreText"></span>
 	<div class="fl-icon-check" role="image"></div>
-    <div class="fl-icon-text">More Text</div>
+    <div class="fl-icon-text">Extra Words</div>
 </label>
