--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -10,9 +10,11 @@
     <div class="fl-container-flex60 fl-force-left preference flc-uiOptions-increaseSizePanel">
 
         <input type="checkbox" id="preferenceSwitchIncreaseSize"/>
-		<div class="headerImage fl-adjuster-icons">
+		<div class="headerImage fl-adjuster-icons fl-adjuster-icons-sept-12">
 		</div>
 		<label class="headerTitle" for="preferenceSwitchIncreaseSize">increase size</label>
+		<div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12">
+		</div>
 
         <input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
 		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
