--- a/demos/pmt/uiOptionsCursorPreview.html
+++ b/demos/pmt/uiOptionsCursorPreview.html
@@ -8,7 +8,9 @@
 <body class="flc-uiOptions-preview-per-setting-body">
 	<div class="flc-uiOptions-preview-per-setting-div">
       <div class="flc-uiOptions-preview-per-setting-div-inner">
-			<div class="fl-adjuster-icons flc-uiOptions-preview-per-setting-cursor"></div>
+			<div class="fl-adjuster-icons fl-adjuster-icons-sept-12 flc-uiOptions-preview-per-setting-cursor1"></div>
+			<div class="fl-adjuster-icons fl-adjuster-icons-sept-12 flc-uiOptions-preview-per-setting-cursor2"></div>
+			<div class="fl-adjuster-icons fl-adjuster-icons-sept-12 flc-uiOptions-preview-per-setting-cursor3"></div>
       </div>
 	</div>
 </body>
