--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -1,4 +1,4 @@
-<form id="options" action="" class="fl-uiOptions fl-uiOptions-fullPreview fl-focus">
+<form id="options" action="" class="fl-uiOptions fl-focus">
 	<div class="fl-container-flex60 fl-force-left preference flc-uiOptions-contrastPanel">
 
 	    <div class="contrastPreferenceGroup">
