Changed the header's layout and added a transparent label that accepts the clicks in order to solve the bug with label's padding not getting clicked.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -11,10 +11,10 @@
 
         <input type="checkbox" id="preferenceSwitchIncreaseSize"/>
 		<div class="headerImage fl-adjuster-icons fl-adjuster-icons-sept-12">
-			<label class="headerTitle" for="preferenceSwitchIncreaseSize">increase size</label>
+			<label class="headerTitle">increase size</label>
+			<div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12"></div>
 		</div>
-		<div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12">
-		</div>
+		<label class="headerTitle headerClickableLabel" for="preferenceSwitchIncreaseSize">increase size</label>
 
         <input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
 		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
