--- a/src/shared/preview/html/uiOptionsCursorPreview.html
+++ b/src/shared/preview/html/uiOptionsCursorPreview.html
@@ -2,8 +2,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Preview</title>
-    <link rel="stylesheet" type="text/css" href="../../src/shared/adjusters/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-yb-uio.css" />
+    <link rel="stylesheet" type="text/css" href="../../adjusters/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../../lib/infusion/components/uiOptions/css/fss/fss-theme-yb-uio.css" />
 </head>
 <body class="flc-uiOptions-preview-per-setting-body">
 	<div class="flc-uiOptions-preview-per-setting-div">
