--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/CustomAdjusters.js"></script>
     <script type="text/javascript" src="../../src/shared/adjusters/js/PreferencesManagementTool.js"></script>
-    <script type="text/javascript" src="../../src/pmt/js/PMTSliders.js"></script>
+    <script type="text/javascript" src="../../src/pmt/js/PMTSlidingPanels.js"></script>
 
     <script type="text/javascript" src="demo.js"></script>
 <script type="text/javascript">
