Divide-and-conquer: CSS bugs fixed.

--- a/demos/speakTextAdjusterGroup/index.html
+++ b/demos/speakTextAdjusterGroup/index.html
@@ -8,17 +8,19 @@
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/fss/fss-text-uio.css" />
         <link rel="stylesheet" type="text/css" href="../../src/shared/lib/infusion/components/uiOptions/css/UIOptions.css" />
 
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+        <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
+
         <script type="text/javascript" src="../../src/shared/lib/infusion/MyInfusion.js"></script>
+        <!-- <script type="text/javascript" src="../../src/shared/adjusters/js/GPIIStore.js"></script>-->
 
         <script type="text/javascript" src="../../src/shared/adjusters/js/speakTextPanels.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/speakTextCollectivePanel.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/textfieldStepper.js"></script>
         <script type="text/javascript" src="../../src/shared/adjusters/js/speakText.js"></script>
 
-        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-        <script type="text/javascript" src="../../src/shared/adjusters/js/combobox.js"></script>
         <title>Speak Text Demo</title>
     </head>
     <body>
