--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -33,7 +33,7 @@
 
         <div class="speakText-auditoryOutLanguage-element ui-widget">
           <label class="gpii-auditoryOutLanguage-label"></label><br>
-          <select class="gpii-auditoryOutLanguage" id="baba"></select>
+          <select class="gpii-auditoryOutLanguage"></select>
         </div><br>
 
         <div class="speakText-punctuationVerbosity-element">
