Divide-and-conquer: First font icon added.

--- a/src/shared/adjusters/html/speakTextCollectiveTemplate.html
+++ b/src/shared/adjusters/html/speakTextCollectiveTemplate.html
@@ -30,7 +30,6 @@
     </div><br>
 
     <div class="fully-expanded">
-
         <div class="speakText-auditoryOutLanguage-element ui-widget">
           <label class="gpii-auditoryOutLanguage-label"></label><br>
           <select class="gpii-auditoryOutLanguage"></select>
@@ -81,6 +80,7 @@
     </div>
 
     <div class="more-options">
+        <span class="more-options-icon"></span>
         <input type="checkbox" class="more-options-checkbox"/>
         <label for="moreOptions" class="more-options-label"></label>
     </div>
