--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -63,8 +63,8 @@
             <!-- This div is for the sliding panel that shows and hides the discoveryTool controls -->
             <div class="fl-panelBar fl-inverted-color">
                 <!-- button id="reset" class="flc-uiOptions-reset fl-uiOptions-reset"><span class="fl-icon-undo"></span> Reset</button -->
-                <button id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide" aria-label="" aria-controls="dtpanel"></button>
-                <label for="show-hide" class="flc-icon-discover fl-icon-discover" role="presentation" aria-label="Discover"></label>
+        		<span for="show-hide" class="flc-icon-discover fl-icon-discover" role="presentation" aria-label="Discover"></span>
+                <a href="#" id="show-hide" class="flc-slidingPanel-toggleButton fl-uiOptions-showHide" aria-label="" aria-controls="dtpanel" role="button"></a>
             </div>
 
             <!-- This is the div that will contain the UI Options component -->
