GPII-185: Clean up the code for sending a pull request for the GPII settings store.

--- a/demos/discoveryTool/index.html
+++ b/demos/discoveryTool/index.html
@@ -35,7 +35,7 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-            demo.initSettingsStore();
+            demo.initCookieStore();
             demo.initPageEnhancer("discovery-tool-theme");
             demo.initDiscoveryTool(".flc-uiOptions-discoveryTool");
         })
