--- a/src/explorationTool/html/ExplorationTool.html
+++ b/src/explorationTool/html/ExplorationTool.html
@@ -2,17 +2,17 @@
     <div class="flc-uiOptions-controls">
         <ul class="fl-uiOptions-panels">
             <li class="fl-uiOptions-panel">
-                <button class="flc-discoveryTool-try fl-discoveryTool-try">
-                    <span class="flc-discoveryTool-tryLabel">Try something new</span>
+                <button class="flc-explorationTool-try fl-explorationTool-try">
+                    <span class="flc-explorationTool-tryLabel">Try something new</span>
                     <span class="fl-icon-arrow" aria-label="Arrow" role="presentation"></span>
                 </button>
             </li>
-            <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-highContrast"></div></li>
-            <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-lowContrast"></div></li>
-            <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-increaseSize"></div></li>
-            <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-simplify"></div></li>
-            <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-moreText"></div></li>
-            <li class="fl-uiOptions-panel"><div class="flc-discoveryTool-spoken"></div></li>
+            <li class="fl-uiOptions-panel"><div class="flc-explorationTool-highContrast"></div></li>
+            <li class="fl-uiOptions-panel"><div class="flc-explorationTool-lowContrast"></div></li>
+            <li class="fl-uiOptions-panel"><div class="flc-explorationTool-increaseSize"></div></li>
+            <li class="fl-uiOptions-panel"><div class="flc-explorationTool-simplify"></div></li>
+            <li class="fl-uiOptions-panel"><div class="flc-explorationTool-moreText"></div></li>
+            <li class="fl-uiOptions-panel"><div class="flc-explorationTool-spoken"></div></li>
         </ul>
     </div>
 </form>
