--- a/src/explorationTool/html/FatPanelUIOptionsFrame.html
+++ b/src/explorationTool/html/FatPanelUIOptionsFrame.html
@@ -17,7 +17,7 @@
         <!-- Component styles -->
         <link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/components/uiOptions/css/UIOptions.css" />
         <!-- link rel="stylesheet" type="text/css" href="../../shared/lib/infusion/components/uiOptions/css/FatPanelUIOptionsFrame.css" / -->
-        <link rel="stylesheet" type="text/css" href="../css/DiscoveryTool.css" />
+        <link rel="stylesheet" type="text/css" href="../css/ExplorationTool.css" />
 
         <!--[if IE 8]>
             <link rel="stylesheet" type="text/css" href="../css/ie8.css" />
@@ -28,7 +28,7 @@
         <script type="text/javascript" src="../../shared/lib/infusion/MyInfusion.js"></script>
      </head>
 
-    <body class="fl-uiOptions-discoveryTool fl-focus fl-inverted-color">
+    <body class="fl-uiOptions-explorationTool fl-focus fl-inverted-color">
         <span class="fl-hidden">
             <div class="flc-toc-tocContainer"></div>
         </span>
