--- a/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
@@ -1,9 +1,9 @@
 <input type="checkbox" id="preferenceSwitchContrast" class="flc-uiOptions-constrastInput"/>
 <div class="headerImage fl-adjuster-icons fl-adjuster-icons-sept-12">
-	<label class="headerTitle">add contrast</label>
+	<label class="headerTitle"></label>
 	<div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12"></div>
 </div>
-<label class="headerTitle headerClickableLabel" for="preferenceSwitchContrast">add contrast</label>
+<label class="headerTitle headerClickableLabel" for="preferenceSwitchContrast"></label>
 
 <input type="checkbox" id="addToMyPreferencesContrast"/>
 <div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
