Extracted the tooltips for the preferences "star" to .json file.

--- a/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
+++ b/src/shared/adjusters/html/UIOptionsTemplate-contrastNew.html
@@ -8,7 +8,7 @@
 <input type="checkbox" id="addToMyPreferencesContrast"/>
 <div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
 </div>
-<label class="addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="Remove from my preferences" tooltip-unchecked="Add to my preferences" title=""></label>
+<label class="addToMyPreferencesLabel" for="addToMyPreferencesContrast" tooltip-checked="" tooltip-unchecked="" title=""></label>
 <br/>
 <div class="fl-uiOptions-category fl-uiOptions-text">
     <h2><label class="flc-uiOptions-contrast-label"></label></h2>
