Extracted the "more/less" texts to .json file using an ugly way.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -57,7 +57,8 @@
                         listener: "console.log"
                     },
                     onReady: {
-                        listener: demo.initFinishedEvent
+                        listener: demo.initFinishedEvent,
+                        args: "{that}"
                     }
                 }
             }
