Some file and function renames in order to be more descriptive.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -43,7 +43,7 @@
     
     <!-- PMT-specific files -->
     <script type="text/javascript" src="../../src/pmt/js/PMTUIOSchema.js"></script>
-    <script type="text/javascript" src="../../src/pmt/js/PMTSlidingPanels.js"></script>
+    <script type="text/javascript" src="../../src/pmt/js/SetupPMT.js"></script>
 
 	<!-- The demo script -->
     <script type="text/javascript" src="demo.js"></script>
