Cannot yet refresh UI on langiage selection. Moved English messages to "en" folder. Added a language selector drop-down. Holding the language to a global variable. Using language variable to locate correct text resources.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -36,6 +36,16 @@
     </div>
 
     <div class="fl-container-flex35 fl-force-right">
+    	<div class="fl-uiOptions-language">
+    		Language
+    		<select class="fl-uiOptions-language-select">
+			  <option value="en">English</option>
+			  <option value="gr">Ελληνικά</option>
+			  <option value="de">Deutsch</option>
+			  <option value="es">Español</option>
+			</select>
+    	</div>
+    	
         <div class="fl-uiOptions-buttons">
             <input class="flc-uiOptions-save fl-uiOptions-save" type="button" value="Save and apply" />
             <input class="flc-uiOptions-reset" type="button" value="Reset" />
