GPII-222: Removed hard-coded strings from templates and added them to the message bundle.

--- a/src/explorationTool/html/IncreaseSizePanelTemplate.html
+++ b/src/explorationTool/html/IncreaseSizePanelTemplate.html
@@ -2,6 +2,6 @@
 <label for="increase-size">
 	<span class="fl-explorationTool-panel-icon fl-explorationTool-icon-increase-size"></span>
 	<div class="fl-icon-check" role="image"></div>
-	<div class="fl-icon-text">Enlarge</div>
+	<div class="flc-explorationTool-increaseSize-string fl-icon-text"></div>
 </label>
 
