--- a/src/explorationTool/html/LowContrastPanelTemplate.html
+++ b/src/explorationTool/html/LowContrastPanelTemplate.html
@@ -2,5 +2,5 @@
 <label class="flc-explorationTool-lowContrast-choice-label" for="low-contrast">
 	<span class="fl-explorationTool-panel-icon fl-explorationTool-icon-low-contrast"></span>
 	<div class="fl-icon-check" role="image"></div>
-	<div class="fl-icon-text">Less Contrast</div>
+	<div class="flc-explorationTool-lowContrast-string fl-icon-text"></div>
 </label>
