--- a/src/explorationTool/html/MoreTextPanelTemplate.html
+++ b/src/explorationTool/html/MoreTextPanelTemplate.html
@@ -2,5 +2,5 @@
 <label for="more-text">
 	<span class="fl-explorationTool-panel-icon fl-explorationTool-icon-moreText"></span>
 	<div class="fl-icon-check" role="image"></div>
-    <div class="fl-icon-text">Extra Words</div>
+    <div class="flc-explorationTool-moreText-string fl-icon-text"></div>
 </label>
