--- a/src/explorationTool/html/HighContrastPanelTemplate.html
+++ b/src/explorationTool/html/HighContrastPanelTemplate.html
@@ -2,5 +2,5 @@
 <label class="flc-explorationTool-highContrast-choice-label" for="high-contrast">
 	<span class="fl-explorationTool-panel-icon fl-explorationTool-icon-high-contrast"></span>
 	<div class="fl-icon-check" role="image"></div>
-	<div class="fl-icon-text">More Contrast</div>
+	<div class="flc-explorationTool-highContrast-string fl-icon-text"></div>
 </label>
