--- a/src/explorationTool/html/SimplifyPanelTemplate.html
+++ b/src/explorationTool/html/SimplifyPanelTemplate.html
@@ -2,5 +2,5 @@
 <label for="simplify">
 	<span class="fl-explorationTool-panel-icon fl-explorationTool-icon-simplify"></span>
 	<div class="fl-icon-check" role="image"></div>
-	<div class="fl-icon-text">Simplify</div>
+	<div class="flc-explorationTool-simplify-string fl-icon-text"></div>
 </label>
