GPII-185: Exploration tool uses the cookie store by default.

--- a/demos/explorationTool/index.html
+++ b/demos/explorationTool/index.html
@@ -35,8 +35,7 @@
 
     <script type="text/javascript">
         $(document).ready(function () {
-            // demo.initCookieStore();
-            demo.initGpiiStore("http://localhost:8080/user/testDT");
+            demo.initCookieStore();
             demo.initPageEnhancer("exploration-tool-theme");
             demo.initExplorationTool(".flc-uiOptions-explorationTool");
         })
