First successful attempt of extracting "Increase size" header to .json file.

--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -11,10 +11,10 @@
 
         <input type="checkbox" id="preferenceSwitchIncreaseSize"/>
 		<div class="headerImage fl-adjuster-icons fl-adjuster-icons-sept-12">
-			<label class="headerTitle">increase size</label>
+			<label class="headerTitle"></label>
 			<div class="headerImageTick fl-adjuster-icons fl-adjuster-icons-sept-12"></div>
 		</div>
-		<label class="headerTitle headerClickableLabel" for="preferenceSwitchIncreaseSize">increase size</label>
+		<label class="headerTitle headerClickableLabel" for="preferenceSwitchIncreaseSize"></label>
 
         <input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
 		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
