--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -19,7 +19,7 @@
         <input type="checkbox" id="addToMyPreferencesIncreaseSize"/>
 		<div class="fl-adjuster-icons fl-adjuster-icons-additional addToMyPreferencesStar">
 		</div>
-		<label class="addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="Remove from my preferences" tooltip-unchecked="Add to my preferences" title=""></label>
+		<label class="addToMyPreferencesLabel" for="addToMyPreferencesIncreaseSize" tooltip-checked="" tooltip-unchecked="" title=""></label>
 
 	    <div class="increaseSizePreferenceGroup">
 	        <div class="flc-uiOptions-text-size fl-uiOptions-category fl-uiOptions-text"></div>
@@ -37,8 +37,8 @@
 
     <div class="fl-container-flex35 fl-force-right">
     	<div class="fl-uiOptions-language">
-    		Language
-    		<select class="fl-uiOptions-language-select">
+    		<label class="fl-uiOptions-language-label" for="fl-uiOptions-language-select"></label>
+    		<select class="fl-uiOptions-language-select" id="fl-uiOptions-language-select">
 			  <option value="en">English</option>
 			  <option value="gr">Ελληνικά</option>
 			  <option value="de">Deutsch</option>
