Localised the "more/less" button on init. Needed a nbsp in markup for Chrome to render (and slide) it correctly. All localised text of main page is set onReady using the uiOptionsLoader's msgBundle. Removed the Save etc. buttons' texts from markup.

--- a/demos/pmt/index.html
+++ b/demos/pmt/index.html
@@ -71,6 +71,7 @@
  	   	        	saveButton: ".flc-uiOptions-save",
  	   	        	resetButton: ".flc-uiOptions-reset",
  	   	        	cancelButton: ".flc-uiOptions-cancel",
+ 	   	        	moreLess: ".moreLess",
     	        },
     	        strings: {
     	            increaseSizeHeader: {
