--- a/src/pmt/html/PMTUIOptions.html
+++ b/src/pmt/html/PMTUIOptions.html
@@ -31,7 +31,7 @@
 				<div class="flc-uiOptions-magnifierFollows fl-uiOptions-category fl-uiOptions-text"></div>
 	        </div>
 
-			<label class="moreLess fl-uiOptions-category">+ more</label>
+			<label class="moreLess fl-uiOptions-category">&nbsp;</label>
 		</div>	
     </div>
 
@@ -47,9 +47,9 @@
     	</div>
     	
         <div class="fl-uiOptions-buttons">
-            <input class="flc-uiOptions-save fl-uiOptions-save" type="button" value="Save and apply" />
-            <input class="flc-uiOptions-reset" type="button" value="Reset" />
-            <input class="flc-uiOptions-cancel fl-uiOptions-cancel" type="button" value="Cancel" />
+            <input class="flc-uiOptions-save fl-uiOptions-save" type="button" value="" />
+            <input class="flc-uiOptions-reset" type="button" value="" />
+            <input class="flc-uiOptions-cancel fl-uiOptions-cancel" type="button" value="" />
         </div>
     </div>
 </form>
