--- a/src/shared/preview/html/uiOptionsContrastPreview.html
+++ b/src/shared/preview/html/uiOptionsContrastPreview.html
@@ -8,7 +8,9 @@
 <body class="flc-uiOptions-preview-per-setting-body">
 	<div class="flc-uiOptions-preview-per-setting-div">
       <div class="flc-uiOptions-preview-per-setting-div-inner">
-          <p>This is how the page will appear.</p>
+          <p>
+          	<label class="flc-uiOptions-preview-per-setting-label"></label>
+          </p>
       </div>
 	</div>
 </body>
